--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Frequently Asked Questions</h1>
+    <h2>Rafsan</h2>
+    <h2>Farhad</h2>
+    <h2>Nazrul</h2>
 </body>
 
 </html>
