just one line add

--- a/ourclient.html
+++ b/ourclient.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <main><h1>out client</h1></main>
+    <main>
+      <section>
+        <h1>out client</h1>
+        <p>is our best client</p>
+      </section>
+    </main>
   </body>
 </html>
